--- a/google_chrome_ext/options.html
+++ b/google_chrome_ext/options.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
+      /* button {
+        height: 20px;
+        width: 35px;
         outline: none;
         margin: 10px;
-      }
+      } */
     </style>
   </head>
   <body>
-    <div id="buttonDiv">
+    <div>
+      Personal Budget annual limit: <input id="limit-input" value="1200"></input>
+      <button id="save">Save</button>
     </div>
   </body>
   <script src="options.js"></script>
