--- a/google_chrome_ext/popup.html
+++ b/google_chrome_ext/popup.html
@@ -2,21 +2,24 @@
 <html>
   <head>
     <style>
-      /* button {
-        height: 30px;
-        width: 100px;
-        outline: none;
-      } */
       div {
-        width: 100px;
+        width: 110px;
+        font-family: verdana;
+        font-size: 110%;
+        color: #9c9c9c;
+      }
+      span {
+        color: #7f7f7f;
       }
     </style>
   </head>
   <body>
     <div>
-      limit: <span id="limit"></span><br>
-      used: <span id="used"></span><br>
-      left:  <span id="left"></span>
+      <b>
+        limit: <span id="limit"></span><br>
+        spent: <span id="spent"></span><br>
+        left:  <span id="left"></span>
+      </b>
     </div>
     <script src="popup.js"></script>
   </body>
