fixed point fluctuation

--- a/google_chrome_ext/options.html
+++ b/google_chrome_ext/options.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <div>
-      Personal Budget annual limit: <input id="limit-input" value="1200"></input>
+      Personal Budget annual limit: <input id="limit-input"></input>
       <button id="save">Save</button>
     </div>
   </body>
