Migrate from Chrome to Firefox.
This extension started as a copy of a Chrome extension, and was ported
over to being a Firefox extension. The logic is exactly the same with a
few small changes:

  - browser api instead of the chrome api
  - promise based vs callback based

--- a/extension/options.html
+++ b/extension/options.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+
   <body>
     <div>
-      Personal Budget annual limit: <input id="limit-input"></input>
+      Personal Budget annual limit: <input id="limit-input" />
       <button id="save">Save</button>
     </div>
   </body>
