--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <style>
       div {
         width: 110px;
@@ -8,17 +9,19 @@
         font-size: 110%;
         color: #9c9c9c;
       }
+
       span {
         color: #7f7f7f;
       }
     </style>
   </head>
+
   <body>
     <div>
       <b>
-        limit: <span id="limit"></span><br>
-        spent: <span id="spent"></span><br>
-        left:  <span id="left"></span>
+        limit: <span id="limit"></span><br />
+        spent: <span id="spent"></span><br />
+        left: <span id="left"></span>
       </b>
     </div>
     <script src="popup.js"></script>
